--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img src="logo/logo2.png" alt="">
     </div>
     <div class="two">
-        <p>ENERGY is LIVE!! Shop, Ship & Make ALL Payments in Naira now</p>
+        <p>ENERGY is LIVE!! Shop, Ship & Make ALL Payments in Naira</p>
     </div>
      <div class="three">
         <button>learn more</button>
