--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 <h1>Seamless delivery services</h1>
 <div class="sec">
     <div class="col">
-        <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+        <i class="fa fa-shopping-basket" aria-hidden="true"> SHIP NOW</i>
+        <p>Request pick up, Delivery or Xpress drop off</p>
 
     </div>
     <div class="col">
