--- a/index.html
+++ b/index.html
@@ -61,15 +61,18 @@
 
     </div>
     <div class="col">
-        <i class="fa fa-plane" aria-hidden="true"></i>
+        <i class="fa fa-plane" aria-hidden="true">OVERSEES SHIPPING</i>
+        <P>Ship from UK, Canada or Texas to Nigeria and Export to 13 Locations Worldwide</P>
 
     </div>
     <div class="col">
-        <i class="fa fa-calculator" aria-hidden="true"></i>
+        <i class="fa fa-calculator" aria-hidden="true">GET A QUICK QUOTE</i>
+        <P>Calculate Cost for Local $ International Shipment</P>
 
     </div>
     <div class="col">
-        <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+        <i class="fa fa-shopping-cart" aria-hidden="true">PERSONAL SHOPPER</i>
+        <P>We shop quality product $ ship to your doorstep</P>
 
     </div>
 </div>
