--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>ENERGY LOGISTIC</title>
 </head>
 <link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.mincss">
 <body>
     <!-----header begins-->
 <div class="header">
