--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ENERGY LOGISTIC</title>
 </head>
 <link rel="stylesheet" href="index.css">
-<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.mincss">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 <body>
     <!-----header begins-->
 <div class="header">
@@ -57,12 +57,12 @@
 <h1>Seamless delivery services</h1>
 <div class="sec">
     <div class="col">
-        <i class="fa fa-shopping-basket" aria-hidden="true"> SHIP NOW</i>
+       <span> <i class="fa fa-shopping-basket" aria-hidden="true"> SHIP NOW</i></span>
         <p>Request pick up, Delivery or Xpress drop off</p>
 
     </div>
     <div class="col">
-        <i class="fa fa-plane" aria-hidden="true">OVERSEES SHIPPING</i>
+       <span> <i class="fa fa-plane" aria-hidden="true">OVERSEES SHIPPING</i></span>
         <P>Ship from UK, Canada or Texas to Nigeria and Export to 13 Locations Worldwide</P>
 
     </div>
