--- a/index.html
+++ b/index.html
@@ -57,22 +57,27 @@
 <h1>Seamless delivery services</h1>
 <div class="sec">
     <div class="col">
-       <span> <i class="fa fa-shopping-basket" aria-hidden="true"> SHIP NOW</i></span>
+       <span> <i class="fa fa-shopping-basket" aria-hidden="true"></i></span>
+       <p>SHIP NOW</p>
         <p>Request pick up, Delivery or Xpress drop off</p>
 
     </div>
     <div class="col">
-       <span> <i class="fa fa-plane" aria-hidden="true">OVERSEES SHIPPING</i></span>
+       <span> <i class="fa fa-plane" aria-hidden="true"></i></span>
+       <P>OVERSEES SHIPPING</P>
         <P>Ship from UK, Canada or Texas to Nigeria and Export to 13 Locations Worldwide</P>
 
     </div>
     <div class="col">
-        <i class="fa fa-calculator" aria-hidden="true">GET A QUICK QUOTE</i>
+        <SPAN><i class="fa fa-calculator" aria-hidden="true"></i></SPAN>
+        <P>GET A QUICK QUOTE</P>
         <P>Calculate Cost for Local $ International Shipment</P>
 
     </div>
     <div class="col">
-        <i class="fa fa-shopping-cart" aria-hidden="true">PERSONAL SHOPPER</i>
+        <span>
+            <i class="fa fa-shopping-cart" aria-hidden="true"></i></span>
+        <p>PERSONAL SHOPPER</p>
         <P>We shop quality product $ ship to your doorstep</P>
 
     </div>
