--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 
 <div class="next">
     <div class="now">
-
+        <p>ENERGY, The APP for local and International shipping</p>
     </div>
-    <div class="now"></div>
+    <div class="know"></div>
 </div>
 <!-----section4-->
 
