--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="now">
         <p>ENERGY, The APP for local and International shipping</p>
     </div>
-    <div class="know"></div>
+    <div class="now"></div>
 </div>
 <!-----section4-->
 
