--- a/index.html
+++ b/index.html
@@ -90,8 +90,11 @@
 <div class="next">
     <div class="now">
         <p>ENERGY, The APP for local and International shipping</p>
+        <button><i class="fa-brands fa-apple"></i></button>  <button><i class="fa-brands fa-google-play"></i></button>
     </div>
-    <div class="now"></div>
+    <div class="now">
+        <img src="logo/logo3.png" alt="">
+    </div>
 </div>
 <!-----section4-->
 
