--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 <div class="next">
     <div class="now">
         <p>ENERGY, The APP for local and International shipping</p>
-        <button><i class="fa-brands fa-apple"></i></button>  <button><i class="fa-brands fa-google-play"></i></button>
+        <button><i class="fa-brands fa-apple"></i> <p> Download on the</p><h3> App Store</h3></button> 
+         <button><i class="fa-brands fa-google-play"></i><p>Get it on</p><h3>Google Play</h3></button>
     </div>
     <div class="now">
         <img src="logo/logo3.png" alt="">
