--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
          <button><i class="fa-brands fa-google-play"></i><p>Get it on</p><h3>Google Play</h3></button>
     </div>
     <div class="now">
-        <img src="logo/logo3.png" alt="">
+        <img src="logo/logo3.jpg" alt="">
     </div>
 </div>
 <!-----section4-->
