--- a/index.html
+++ b/index.html
@@ -99,6 +99,18 @@
 </div>
 <!-----section4-->
 
+<!-----section5-->
+<h2>We take the
+    <p>burden of logistics off you.</p>
+</h2>
+<div class="sec3">
+    <div class="opps"></div>
+    <div class="opps"></div>
+    <div class="opps"></div>
+</div>
+
+<!---section5-->
+
 
 
 
